# slide

editor/language_server/: Cargo.toml
editor/language_server/src/: diagnostics.rs  lsp.rs  shims.rs
editor/language_server/src/services/: hover.rs
editor/server/: Cargo.toml
libslide/src/: lib.rs
libslide/src/grammar/: collectors.rs  mem.rs
libslide/src/parser/: statement_parser.rs  test_utils.rs
libslide/src/utils/: test.rs
slide/fuzz/: Cargo.toml
